--- a/index.html
+++ b/index.html
@@ -324,6 +324,17 @@
                     { type: 'col', index: 3, start: 0, end: 6 }, { type: 'col', index: 6, start: 0, end: 6 }
                 ]
             },
+             'hash_hush': {
+                id: 'hash_hush',
+                name: 'Hash Hush',
+                title: 'Alloha - Cacti Facti - Hash Hush Edition',
+                highScoreKey: 'cactiFactiHighScore_hash_hush',
+                isTwinningCell: (r, c) => [2, 4].includes(r) || [2, 4].includes(c),
+                getCrossScoreSegments: () => [
+                    { type: 'row', index: 2, start: 0, end: 6 }, { type: 'row', index: 4, start: 0, end: 6 },
+                    { type: 'col', index: 2, start: 0, end: 6 }, { type: 'col', index: 4, start: 0, end: 6 }
+                ]
+            },
             'core': {
                 id: 'core',
                 name: 'Cacti Facti Edition',
@@ -340,6 +351,75 @@
                     { type: 'row', index: 3, start: 3, end: 5 }, { type: 'row', index: 5, start: 1, end: 3 },
                     { type: 'col', index: 1, start: 1, end: 5 }, { type: 'col', index: 3, start: 0, end: 6 },
                     { type: 'col', index: 5, start: 0, end: 3 }
+                ]
+            },
+            'eight_and_watch': {
+                id: 'eight_and_watch',
+                name: 'Eight and Watch',
+                title: 'Alloha - Cacti Facti - Eight and Watch Edition',
+                highScoreKey: 'cactiFactiHighScore_eight_and_watch',
+                isTwinningCell: (r, c) => (r === 0 && c >= 3) || (r === 3) || (r === 6 && c <= 3) || (c === 0 && r >= 3) || (c === 3) || (c === 4 && r <= 3),
+                getCrossScoreSegments: () => [
+                    { type: 'row', index: 0, start: 3, end: 6 }, { type: 'row', index: 3, start: 0, end: 6 }, { type: 'row', index: 6, start: 0, end: 3 },
+                    { type: 'col', index: 0, start: 3, end: 6 }, { type: 'col', index: 3, start: 0, end: 6 }, { type: 'col', index: 4, start: 0, end: 3 }
+                ]
+            },
+            'fake_snake': {
+                id: 'fake_snake',
+                name: 'Fake Snake',
+                title: 'Alloha - Cacti Facti - Fake Snake Edition',
+                highScoreKey: 'cactiFactiHighScore_fake_snake',
+                isTwinningCell: (r, c) => (r === 0 && c >= 4) || (r === 2 && c >= 2 && c <= 4) || (r === 4 && c <= 2) || (c === 0 && r >= 4) || (c === 2 && r >= 2 && r <= 4) || (c === 4 && r <= 2),
+                getCrossScoreSegments: () => [
+                    { type: 'row', index: 0, start: 4, end: 6 }, { type: 'row', index: 2, start: 2, end: 4 }, { type: 'row', index: 4, start: 0, end: 2 },
+                    { type: 'col', index: 0, start: 4, end: 6 }, { type: 'col', index: 2, start: 2, end: 4 }, { type: 'col', index: 4, start: 0, end: 2 }
+                ]
+            },
+            'rune_dune': {
+                id: 'rune_dune',
+                name: 'Rune Dune',
+                title: 'Alloha - Cacti Facti - Rune Dune Edition',
+                highScoreKey: 'cactiFactiHighScore_rune_dune',
+                isTwinningCell: (r, c) => (r === 2 && c >= 1 && c <= 5) || (r === 4 && c >= 1 && c <= 5) || (c === 1 && (r <= 2 || r >= 4)) || (c === 3) || (c === 5 && (r <= 2 || r >= 4)),
+                getCrossScoreSegments: () => [
+                    { type: 'row', index: 2, start: 1, end: 5 }, { type: 'row', index: 4, start: 1, end: 5 },
+                    { type: 'col', index: 1, start: 0, end: 2 }, { type: 'col', index: 1, start: 4, end: 6 },
+                    { type: 'col', index: 3, start: 0, end: 6 },
+                    { type: 'col', index: 5, start: 0, end: 2 }, { type: 'col', index: 5, start: 4, end: 6 }
+                ]
+            },
+            'space_race': {
+                id: 'space_race',
+                name: 'Space Race',
+                title: 'Alloha - Cacti Facti - Space Race Edition',
+                highScoreKey: 'cactiFactiHighScore_space_race',
+                isTwinningCell: (r, c) => (r === 2 && c >= 2 && c <= 4) || (r === 3 && (c <= 2 || c >= 4)) || (r === 4 && c >= 2 && c <= 4) || (c === 2 && r >= 2 && r <= 4) || (c === 3 && (r <= 2 || r >= 4)) || (c === 4 && r >= 2 && r <= 4),
+                getCrossScoreSegments: () => [
+                    { type: 'row', index: 2, start: 2, end: 4 }, { type: 'row', index: 3, start: 0, end: 2 }, { type: 'row', index: 3, start: 4, end: 6 }, { type: 'row', index: 4, start: 2, end: 4 },
+                    { type: 'col', index: 2, start: 2, end: 4 }, { type: 'col', index: 3, start: 0, end: 2 }, { type: 'col', index: 3, start: 4, end: 6 }, { type: 'col', index: 4, start: 2, end: 4 }
+                ]
+            },
+             'flower_power': {
+                id: 'flower_power',
+                name: 'Flower Power',
+                title: 'Alloha - Cacti Facti - Flower Power Edition',
+                highScoreKey: 'cactiFactiHighScore_flower_power',
+                isTwinningCell: (r, c) => (r === 0 && c >= 2 && c <= 4) || (r === 2 && c >= 2 && c <= 4) || r === 4 || (c === 1 && r >= 3 && r <= 5) || (c === 2 && r <= 2) || (c === 3 && r >= 2) || (c === 4 && r <= 2) || (c === 5 && r >= 3 && r <= 5),
+                getCrossScoreSegments: () => [
+                    { type: 'row', index: 0, start: 2, end: 4 }, { type: 'row', index: 2, start: 2, end: 4 }, { type: 'row', index: 4, start: 0, end: 6 },
+                    { type: 'col', index: 1, start: 3, end: 5 }, { type: 'col', index: 2, start: 0, end: 2 },
+                    { type: 'col', index: 3, start: 2, end: 6 }, { type: 'col', index: 4, start: 0, end: 2 }, { type: 'col', index: 5, start: 3, end: 5 }
+                ]
+            },
+            'monster': {
+                id: 'monster',
+                name: 'Monster Monster',
+                title: 'Alloha - Cacti Facti - Monster Edition',
+                highScoreKey: 'cactiFactiHighScore_monster',
+                isTwinningCell: (r, c) => (r === 0 && c <= 2) || (r === 2 && c <= 4) || (r === 3 && c >= 4) || (r === 4 && c >= 2 && c <= 4) || (r === 6 && c <= 3) || (c === 0 && r <= 2) || (c === 2 && r <= 4) || (c === 3 && r >= 4) || (c === 4 && r >= 2 && r <= 4),
+                 getCrossScoreSegments: () => [
+                    { type: 'row', index: 0, start: 0, end: 2 }, { type: 'row', index: 2, start: 0, end: 4 }, { type: 'row', index: 3, start: 4, end: 6 }, { type: 'row', index: 4, start: 2, end: 4 }, { type: 'row', index: 6, start: 0, end: 3 },
+                    { type: 'col', index: 0, start: 0, end: 2 }, { type: 'col', index: 2, start: 0, end: 4 }, { type: 'col', index: 3, start: 4, end: 6 }, { type: 'col', index: 4, start: 2, end: 4 }
                 ]
             }
         };
@@ -812,7 +892,7 @@
             init() {
                 this.populateEditionModal();
                 this.setupGlobalEventListeners();
-                this.switchVariant('plain_jean'); // Default variant
+                this.switchVariant('plain_jean');
             },
 
             populateEditionModal() {
